syntax = "proto3";

import "google/protobuf/wrappers.proto";

package claims.schema;

// Enum for PartyType
enum PartyType {
  PERSON = 0;
  VEHICLE = 1;
}

// Enum for PartySubtype
enum PartySubtype {
  CAR = 0;
  MOTORBIKE = 1;
  OWNER = 2;
  BENEFICIARY = 3;
  DRIVER = 4;
  PASSENGER = 5;
  OTHER = 6;
}

// Message for Person
message Person {
  PartySubtype subtype = 1;
  string name = 2;
}

// Message for Vehicle
message Vehicle {
  PartySubtype subtype = 1;
  string reg_no = 2;
  string make = 3;
  string model = 4;
}

// Message for PartyData
message PartyData {
  oneof data {
    Person person = 1;
    Vehicle vehicle = 2;
  }
}

// Message for Party
message Party {
  int32 id = 1;
  int32 claim_id = 2;
  PartyType type = 3;
  PartySubtype subtype = 4;
  PartyData data = 5;
}